// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DEPRECATED_PhoneIntegrationListItem/> render() should render 1`] = `
<tr>
  <td
    class="link-full-td"
  >
    <a
      to="/app/settings/integrations/phone/1/preferences"
    >
      <div>
        <b>
          <span
            class="mr-3"
          >
            🍏
          </span>
          Fake phone integration
        </b>
        <span
          class="text-faded ml-3"
        >
          +1 415-111-2222
        </span>
      </div>
    </a>
  </td>
  <td
    class="smallest align-middle"
  >
    <a
      to="/app/settings/integrations/phone/1/preferences"
    >
      <i
        class="material-icons md-2 align-middle icon-go-forward"
      >
        keyboard_arrow_right
      </i>
    </a>
  </td>
</tr>
`;

exports[`<DEPRECATED_PhoneIntegrationListItem/> render() should render with IVR badge 1`] = `
<tr>
  <td
    class="link-full-td"
  >
    <a
      to="/app/settings/integrations/phone/1/preferences"
    >
      <div>
        <b>
          <span
            class="mr-3"
          >
            🍏
          </span>
          Fake phone integration
        </b>
        <span
          class="ml-3 ivrBadge badge badge-secondary"
        >
          IVR
        </span>
        <span
          class="text-faded ml-3"
        >
          +1 415-111-2222
        </span>
      </div>
    </a>
  </td>
  <td
    class="smallest align-middle"
  >
    <a
      to="/app/settings/integrations/phone/1/preferences"
    >
      <i
        class="material-icons md-2 align-middle icon-go-forward"
      >
        keyboard_arrow_right
      </i>
    </a>
  </td>
</tr>
`;
